Fix minor spacing issues

--- a/trillo/src/scss/components/_components.scss
+++ b/trillo/src/scss/components/_components.scss
@@ -104,6 +104,7 @@
 
 .movie-critics {
   list-style: none;
+  flex: 0 0 23%;
 }
 
 .movie-critic {
