--- a/trillo/src/scss/layout/_layout.scss
+++ b/trillo/src/scss/layout/_layout.scss
@@ -225,13 +225,13 @@
   align-items: flex-start;
 
   &__plot {
-    width: 88%;
+    width: 92%;
     margin-block-end: 1.6rem;
   }
 }
 
 .movie-credits {
-  flex: 0 0 80%;
+  flex: 0 0 76%;
 }
 
 .movie-credits-list {
